--- a/home.html
+++ b/home.html
@@ -175,6 +175,33 @@
     ]
   },
   {
+    "title": "Tắc ruột sau phẫu thuật sa trực tràng",
+    "content": "Bài viết đề cập đến trường hợp bệnh nhân 18 tuổi bị tắc ruột sau khi phẫu thuật sa trực tràng. Sau một tuần phẫu thuật, bệnh nhân xuất hiện triệu chứng chướng bụng, xuất huyết tiêu hóa và không thể đi đại tiện. Các bác sĩ đã phát hiện tắc ruột do nhiễm trùng vết mổ và thực hiện các biện pháp can thiệp như nội soi trực tràng và đặt ống thông để cầm máu. Sau điều trị, sức khỏe bệnh nhân đã hồi phục và xuất viện bình thường.",
+    "link": "https://vnexpress.net/tac-ruot-sau-phau-thuat-sa-truc-trang-4865977.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao bệnh nhân Hoàng bị tắc ruột sau phẫu thuật sa trực tràng?",
+    "answers": [
+      {
+        "text": "Do nhiễm trùng vết mổ",
+        "correct": true
+      },
+      {
+        "text": "Do chế độ ăn uống không hợp lý",
+        "correct": false
+      },
+      {
+        "text": "Do không tập luyện thể dục",
+        "correct": false
+      },
+      {
+        "text": "Do di truyền từ gia đình",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dương Hoàng Yến bức xúc vì bị đồn qua đời sau khi liệt dây thần kinh số 7",
     "content": "Dương Hoàng Yến đã lên tiếng phản đối thông tin sai lệch trên mạng xã hội về việc cô qua đời sau khi bị liệt dây thần kinh số 7. Một fanpage có hơn 300.000 lượt theo dõi đã đăng tải hình ảnh cùng dòng chia sẻ gây sốc, khiến cô cảm thấy bức xúc. Dương Hoàng Yến khẳng định rằng cô vẫn khỏe mạnh và chỉ bị liệt dây thần kinh tạm thời. Cô cũng nhấn mạnh tầm quan trọng của việc chăm sóc sức khỏe và cảnh báo về căn bệnh này.",
     "link": "https://dantri.com.vn/giai-tri/duong-hoang-yen-buc-xuc-vi-bi-don-qua-doi-sau-khi-liet-day-than-kinh-so-7-20250326115721173.htm",
@@ -1342,6 +1369,33 @@
     ]
   },
   {
+    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
+    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
+    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
+    "answers": [
+      {
+        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng không cần phải lo lắng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
     "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
     "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
@@ -1368,33 +1422,6 @@
       },
       {
         "text": "80 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
-    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
-    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
-    "answers": [
-      {
-        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
-        "correct": true
-      },
-      {
-        "text": "Không, đây chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng không cần phải lo lắng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
         "correct": false
       }
     ]
@@ -2328,33 +2355,6 @@
     ]
   },
   {
-    "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
-    "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
-    "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Nguyễn Thị Cẩm Ly là ai và cô đã nhận giải thưởng gì?",
-    "answers": [
-      {
-        "text": "Nguyễn Thị Cẩm Ly là nữ sinh nhận giải thưởng Lý Tự Trọng 2025.",
-        "correct": true
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nhà khoa học nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nghệ sĩ âm nhạc.",
-        "correct": false
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gặp 'cơn sốc điện' khi ngưng thuốc trầm cảm đột ngột",
     "content": "Bài viết nói về trường hợp của Vũ, một người đàn ông 32 tuổi, tự ý ngừng thuốc trầm cảm và gặp phải hội chứng ngưng thuốc nghiêm trọng. Sau ba ngày không dùng thuốc, anh cảm thấy chóng mặt, buồn nôn và có cảm giác như bị điện giật trong não. Bác sĩ khuyên anh nên quay lại dùng thuốc với liều thấp hơn và giảm dần để cơ thể thích nghi. Nhiều người khác cũng gặp tình trạng tương tự khi ngừng thuốc đột ngột, dẫn đến các triệu chứng tâm lý và thể chất nghiêm trọng.",
     "link": "https://vnexpress.net/gap-con-soc-dien-khi-ngung-thuoc-tram-cam-dot-ngot-4864993.html",
@@ -2377,6 +2377,33 @@
       },
       {
         "text": "Sử dụng thuốc không đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
+    "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
+    "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nguyễn Thị Cẩm Ly là ai và cô đã nhận giải thưởng gì?",
+    "answers": [
+      {
+        "text": "Nguyễn Thị Cẩm Ly là nữ sinh nhận giải thưởng Lý Tự Trọng 2025.",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà khoa học nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nghệ sĩ âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
         "correct": false
       }
     ]
@@ -2494,33 +2521,6 @@
     ]
   },
   {
-    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
-    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
-    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
-    "cat": "oto-xe-may",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
-    "answers": [
-      {
-        "text": "Do lái xe với tốc độ cao và không kiểm soát",
-        "correct": true
-      },
-      {
-        "text": "Vì xe điện không an toàn",
-        "correct": false
-      },
-      {
-        "text": "Do đường phố không đủ ánh sáng",
-        "correct": false
-      },
-      {
-        "text": "Vì tài xế không có kinh nghiệm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự kiến phương án sắp xếp phường xã 22 quận huyện của TP HCM",
     "content": "TP HCM đang dự kiến thực hiện phương án sắp xếp lại các phường và xã tại 22 quận huyện, theo đó quận 3 và huyện Hóc Môn có thể trở thành một phường và xã. TP Thủ Đức sẽ chuyển thành 9 phường mới, trong khi nhiều quận nội đô sẽ được tổ chức lại thành 2-3 phường. Mục tiêu của kế hoạch này là giảm số đơn vị hành chính từ 273 xuống còn hơn 80, nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý.",
     "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-22-quan-huyen-cua-tp-hcm-4865782.html",
@@ -2543,6 +2543,33 @@
       },
       {
         "text": "100 phường và xã",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
+    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
+    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
+    "cat": "oto-xe-may",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
+    "answers": [
+      {
+        "text": "Do lái xe với tốc độ cao và không kiểm soát",
+        "correct": true
+      },
+      {
+        "text": "Vì xe điện không an toàn",
+        "correct": false
+      },
+      {
+        "text": "Do đường phố không đủ ánh sáng",
+        "correct": false
+      },
+      {
+        "text": "Vì tài xế không có kinh nghiệm",
         "correct": false
       }
     ]
@@ -3526,6 +3553,37 @@
     ]
   },
   {
+    "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
+    "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
+    "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Ngọc Hà đã giành giải gì trong cuộc thi hát trực tuyến \"Bài ca thống nhất\"?",
+    "answers": [
+      {
+        "text": "Giải nhất",
+        "correct": true
+      },
+      {
+        "text": "Giải nhì",
+        "correct": false
+      },
+      {
+        "text": "Giải ba",
+        "correct": false
+      },
+      {
+        "text": "Giải khuyến khích",
+        "correct": false
+      },
+      {
+        "text": "Giải thí sinh được yêu thích nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kháng insulin gây mụn trứng cá thế nào",
     "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
     "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
@@ -3575,37 +3633,6 @@
       },
       {
         "text": "Thịt gà, khoai tây, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thí sinh Ngọc Hà đạt Giải nhất thi hát trực tuyến với bản hit của Hòa Minzy",
-    "content": "Thí sinh Ngọc Hà đã xuất sắc giành Giải nhất cuộc thi hát trực tuyến \"Bài ca thống nhất\" với màn trình diễn ca khúc \"Kén cá chọn canh\" của Hòa Minzy. Cuộc thi do Hội Nhạc sĩ Việt Nam tổ chức nhằm kỷ niệm 50 năm thống nhất đất nước, thu hút hơn 1.000 thí sinh tham gia. Ngọc Hà, 31 tuổi và là một nghệ sĩ đã có nhiều thành tích trong âm nhạc, đã chinh phục ban giám khảo và khán giả với giọng hát cao vút và phong cách biểu diễn ấn tượng.",
-    "link": "https://dantri.com.vn/giai-tri/thi-sinh-ngoc-ha-dat-giai-nhat-thi-hat-truc-tuyen-voi-ban-hit-cua-hoa-minzy-20250325162752412.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Ngọc Hà đã giành giải gì trong cuộc thi hát trực tuyến \"Bài ca thống nhất\"?",
-    "answers": [
-      {
-        "text": "Giải nhất",
-        "correct": true
-      },
-      {
-        "text": "Giải nhì",
-        "correct": false
-      },
-      {
-        "text": "Giải ba",
-        "correct": false
-      },
-      {
-        "text": "Giải khuyến khích",
-        "correct": false
-      },
-      {
-        "text": "Giải thí sinh được yêu thích nhất",
         "correct": false
       }
     ]
@@ -4179,33 +4206,6 @@
     ]
   },
   {
-    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
-    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
-    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
-    "answers": [
-      {
-        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
-        "correct": true
-      },
-      {
-        "text": "Học sinh sẽ học về lịch sử AI.",
-        "correct": false
-      },
-      {
-        "text": "VAS không có chương trình dạy về AI.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh chỉ học lý thuyết về AI.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bệnh lao phổi có thể chữa khỏi không?",
     "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
     "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
@@ -4228,6 +4228,33 @@
       },
       {
         "text": "Có, nhưng chỉ với thuốc đặc trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
+    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
+    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
+    "answers": [
+      {
+        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
+        "correct": true
+      },
+      {
+        "text": "Học sinh sẽ học về lịch sử AI.",
+        "correct": false
+      },
+      {
+        "text": "VAS không có chương trình dạy về AI.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh chỉ học lý thuyết về AI.",
         "correct": false
       }
     ]
