--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -556,6 +556,37 @@
     ]
   },
   {
+    "title": "Loạt trường đại học lớn mở rộng cơ sở 2 \"sát vách\" Thủ đô",
+    "content": "Nhiều trường đại học lớn tại Việt Nam đang mở rộng cơ sở 2 gần Hà Nội, bao gồm Đại học Kinh tế Quốc dân, Đại học Y Hà Nội, và Đại học Ngoại thương. Các dự án này nhằm tăng cường cơ sở hạ tầng giáo dục, đáp ứng nhu cầu học tập của sinh viên với quy mô lớn. Cụ thể, Đại học Kinh tế Quốc dân sẽ xây dựng phân hiệu 2 tại Hà Nam, trong khi Đại học Y Hà Nội cũng đang triển khai cơ sở mới tại Bắc Ninh. Những cơ sở này sẽ tạo điều kiện học tập cho hàng nghìn sinh viên và nâng cao chất lượng giáo dục.",
+    "link": "https://dantri.com.vn/giao-duc/loat-truong-dai-hoc-lon-mo-rong-co-so-2-sat-vach-thu-do-20250326133208502.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nhiều trường đại học lớn mở rộng cơ sở 2 gần Hà Nội?",
+    "answers": [
+      {
+        "text": "Để đáp ứng nhu cầu học tập của sinh viên",
+        "correct": true
+      },
+      {
+        "text": "Để giảm tải cho cơ sở chính",
+        "correct": false
+      },
+      {
+        "text": "Để nâng cao chất lượng giáo dục",
+        "correct": false
+      },
+      {
+        "text": "Để phát triển kinh tế địa phương",
+        "correct": false
+      },
+      {
+        "text": "Để tăng cường hợp tác quốc tế",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quảng Trị triệt phá sới bầu cua, tạm giữ gần 200 triệu đồng",
     "content": "Công an Quảng Trị vừa triệt phá một vụ đánh bạc theo hình thức xóc bầu cua tại thị trấn Ái Tử, tạm giữ gần 200 triệu đồng. Đây là số tiền bị thu giữ lớn nhất từ trước đến nay trong các vụ đánh bạc kiểu này. Nhóm 9 người tham gia đánh bạc đã bị tạm giữ để phục vụ điều tra.",
     "link": "https://tuoitre.vn/quang-tri-triet-pha-soi-bau-cua-tam-giu-gan-200-trieu-dong-20250326124522152.htm",
@@ -2608,32 +2639,32 @@
     ]
   },
   {
-    "title": "Tiêu cơ vân do tập squat quá sức",
-    "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
-    "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
+    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
+    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
+    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
+    "cat": "kinh-doanh",
+    "positivity": 9,
     "importance": 8,
-    "question": "Tiêu cơ vân cấp do nguyên nhân gì xảy ra ở Nghĩa?",
+    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
     "answers": [
       {
-        "text": "Tập squat cường độ cao quá sức",
+        "text": "Central Bay tại Eco Central Park",
         "correct": true
       },
       {
-        "text": "Chấn thương do tai nạn",
+        "text": "Milan Workspace",
         "correct": false
       },
       {
-        "text": "Bị nhiễm trùng nặng",
+        "text": "Hanoi Creative Space",
         "correct": false
       },
       {
-        "text": "Thiếu nước trong cơ thể",
+        "text": "Saigon Coworking Center",
         "correct": false
       },
       {
-        "text": "Sử dụng thuốc không đúng cách",
+        "text": "Da Nang Office Hub",
         "correct": false
       }
     ]
@@ -2670,32 +2701,32 @@
     ]
   },
   {
-    "title": "Không gian coworking đắt giá lần đầu tiên xuất hiện tại Nghệ An",
-    "content": "Khu đô thị Eco Central Park tại Nghệ An vừa ra mắt không gian coworking đầu tiên với diện tích 1.100m2, kết hợp giữa không gian làm việc và thiên nhiên. Được thiết kế theo phong cách \"live - work - play\", không gian này không chỉ phục vụ cho cư dân mà còn thu hút những người làm việc tự do, tạo cơ hội giao lưu và sáng tạo. Với nhiều cây xanh và ánh sáng tự nhiên, coworking space tại Central Bay hứa hẹn mang lại trải nghiệm làm việc thoải mái, hiệu quả.",
-    "link": "https://tuoitre.vn/khong-gian-coworking-dat-gia-lan-dau-tien-xuat-hien-tai-nghe-an-20250325184509967.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
+    "title": "Tiêu cơ vân do tập squat quá sức",
+    "content": "Nghĩa, 22 tuổi, đã bị tiêu cơ vân cấp sau ba ngày tập squat cường độ cao mà không có bệnh lý nền. Chẩn đoán cho thấy chỉ số creatine kinase của anh tăng cao, cho thấy tình trạng nguy hiểm có thể dẫn đến suy thận. Bác sĩ khuyến cáo rằng tiêu cơ vân có thể gây ra nhiều biến chứng nghiêm trọng, bao gồm suy đa tạng. Để phòng ngừa, người tập thể hình cần tăng cường độ từ từ và theo dõi sức khỏe của bản thân.",
+    "link": "https://vnexpress.net/tieu-co-van-do-tap-squat-qua-suc-4865721.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
     "importance": 8,
-    "question": "Không gian coworking nào vừa được ra mắt tại Nghệ An?",
+    "question": "Tiêu cơ vân cấp do nguyên nhân gì xảy ra ở Nghĩa?",
     "answers": [
       {
-        "text": "Central Bay tại Eco Central Park",
+        "text": "Tập squat cường độ cao quá sức",
         "correct": true
       },
       {
-        "text": "Milan Workspace",
+        "text": "Chấn thương do tai nạn",
         "correct": false
       },
       {
-        "text": "Hanoi Creative Space",
+        "text": "Bị nhiễm trùng nặng",
         "correct": false
       },
       {
-        "text": "Saigon Coworking Center",
+        "text": "Thiếu nước trong cơ thể",
         "correct": false
       },
       {
-        "text": "Da Nang Office Hub",
+        "text": "Sử dụng thuốc không đúng cách",
         "correct": false
       }
     ]
@@ -2929,33 +2960,6 @@
     ]
   },
   {
-    "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
-    "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
-    "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Nguyễn Thị Cẩm Ly là ai và cô đã nhận giải thưởng gì?",
-    "answers": [
-      {
-        "text": "Nguyễn Thị Cẩm Ly là nữ sinh nhận giải thưởng Lý Tự Trọng 2025.",
-        "correct": true
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nhà khoa học nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nghệ sĩ âm nhạc.",
-        "correct": false
-      },
-      {
-        "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gặp 'cơn sốc điện' khi ngưng thuốc trầm cảm đột ngột",
     "content": "Bài viết nói về trường hợp của Vũ, một người đàn ông 32 tuổi, tự ý ngừng thuốc trầm cảm và gặp phải hội chứng ngưng thuốc nghiêm trọng. Sau ba ngày không dùng thuốc, anh cảm thấy chóng mặt, buồn nôn và có cảm giác như bị điện giật trong não. Bác sĩ khuyên anh nên quay lại dùng thuốc với liều thấp hơn và giảm dần để cơ thể thích nghi. Nhiều người khác cũng gặp tình trạng tương tự khi ngừng thuốc đột ngột, dẫn đến các triệu chứng tâm lý và thể chất nghiêm trọng.",
     "link": "https://vnexpress.net/gap-con-soc-dien-khi-ngung-thuoc-tram-cam-dot-ngot-4864993.html",
@@ -2978,6 +2982,33 @@
       },
       {
         "text": "Sử dụng thuốc không đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyện về nữ sinh trẻ tuổi nhất nhận giải thưởng Lý Tự Trọng 2025",
+    "content": "Nguyễn Thị Cẩm Ly, nữ sinh 18 tuổi từ Trường THPT Cẩm Bình, TP Hà Tĩnh, đã xuất sắc nhận giải thưởng Lý Tự Trọng 2025, trở thành cán bộ Đoàn trẻ tuổi nhất được vinh danh. Cẩm Ly không chỉ là bí thư chi đoàn mà còn tham gia nhiều hoạt động Đoàn sôi nổi, như chiến dịch 'Tiếp sức mùa thi' và các phong trào thiện nguyện. Với thành tích học tập ấn tượng, cô gái này là tấm gương tiêu biểu về tinh thần cống hiến và trách nhiệm đối với cộng đồng.",
+    "link": "https://dantri.com.vn/giao-duc/chuyen-ve-nu-sinh-tre-tuoi-nhat-nhan-giai-thuong-ly-tu-trong-2025-20250325230935368.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Nguyễn Thị Cẩm Ly là ai và cô đã nhận giải thưởng gì?",
+    "answers": [
+      {
+        "text": "Nguyễn Thị Cẩm Ly là nữ sinh nhận giải thưởng Lý Tự Trọng 2025.",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà khoa học nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nghệ sĩ âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Thị Cẩm Ly là một nhà văn trẻ.",
         "correct": false
       }
     ]
@@ -3149,33 +3180,6 @@
     ]
   },
   {
-    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
-    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
-    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
-    "cat": "oto-xe-may",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
-    "answers": [
-      {
-        "text": "Do lái xe với tốc độ cao và không kiểm soát",
-        "correct": true
-      },
-      {
-        "text": "Vì xe điện không an toàn",
-        "correct": false
-      },
-      {
-        "text": "Do đường phố không đủ ánh sáng",
-        "correct": false
-      },
-      {
-        "text": "Vì tài xế không có kinh nghiệm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự kiến phương án sắp xếp phường xã 22 quận huyện của TP HCM",
     "content": "TP HCM đang dự kiến thực hiện phương án sắp xếp lại các phường và xã tại 22 quận huyện, theo đó quận 3 và huyện Hóc Môn có thể trở thành một phường và xã. TP Thủ Đức sẽ chuyển thành 9 phường mới, trong khi nhiều quận nội đô sẽ được tổ chức lại thành 2-3 phường. Mục tiêu của kế hoạch này là giảm số đơn vị hành chính từ 273 xuống còn hơn 80, nhằm tinh gọn bộ máy và nâng cao hiệu quả quản lý.",
     "link": "https://vnexpress.net/du-kien-phuong-an-sap-xep-phuong-xa-22-quan-huyen-cua-tp-hcm-4865782.html",
@@ -3198,6 +3202,33 @@
       },
       {
         "text": "100 phường và xã",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Các tài xế xe điện Xiaomi liên tiếp gây tai nạn",
+    "content": "Gần đây, các tài xế của siêu xe điện Xiaomi SU7 Ultra đã liên tiếp gây ra tai nạn nghiêm trọng tại thành phố Quảng Châu, Trung Quốc. Một tài xế đã tăng tốc lên gần 180 km/h vào ban đêm và đâm vào một xe đạp điện, khiến người lái bị thương nặng. Một sự cố khác cũng xảy ra khi một tài xế khác lái xe với tốc độ gần 150 km/h, dẫn đến một vụ va chạm không rõ tình trạng người liên quan. Những tai nạn này đang gây lo ngại về việc kiểm soát tốc độ và an toàn giao thông của các tài xế xe điện này.",
+    "link": "https://vnexpress.net/cac-tai-xe-xe-dien-xiaomi-lien-tiep-gay-tai-nan-4865675.html",
+    "cat": "oto-xe-may",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao các tài xế xe điện Xiaomi liên tiếp gây tai nạn?",
+    "answers": [
+      {
+        "text": "Do lái xe với tốc độ cao và không kiểm soát",
+        "correct": true
+      },
+      {
+        "text": "Vì xe điện không an toàn",
+        "correct": false
+      },
+      {
+        "text": "Do đường phố không đủ ánh sáng",
+        "correct": false
+      },
+      {
+        "text": "Vì tài xế không có kinh nghiệm",
         "correct": false
       }
     ]
@@ -3721,32 +3752,28 @@
     ]
   },
   {
-    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
-    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
-    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
+    "title": "Những bệnh HPV gây ra ở nam giới",
+    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
+    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
     "answers": [
       {
-        "text": "Phong cách nữ tính",
+        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
         "correct": true
       },
       {
-        "text": "Phong cách nam tính",
+        "text": "Cúm, sởi, quai bị",
         "correct": false
       },
       {
-        "text": "Phong cách thể thao",
+        "text": "Tiểu đường, tăng huyết áp",
         "correct": false
       },
       {
-        "text": "Phong cách truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Phong cách công sở",
+        "text": "Bệnh tim mạch, đột quỵ",
         "correct": false
       }
     ]
@@ -3779,33 +3806,6 @@
     ]
   },
   {
-    "title": "Những bệnh HPV gây ra ở nam giới",
-    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
-    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
-    "answers": [
-      {
-        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
-        "correct": true
-      },
-      {
-        "text": "Cúm, sởi, quai bị",
-        "correct": false
-      },
-      {
-        "text": "Tiểu đường, tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tim mạch, đột quỵ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
     "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
     "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
@@ -3828,6 +3828,37 @@
       },
       {
         "text": "Để tạo sự chú ý cho truyền thông.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
+    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
+    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
+    "answers": [
+      {
+        "text": "Phong cách nữ tính",
+        "correct": true
+      },
+      {
+        "text": "Phong cách nam tính",
+        "correct": false
+      },
+      {
+        "text": "Phong cách thể thao",
+        "correct": false
+      },
+      {
+        "text": "Phong cách truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Phong cách công sở",
         "correct": false
       }
     ]
